ingress_redis/01_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  replicas: 1
  serviceName: mysql-svc
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      #terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: eeunchong/rapaf-db:v1
          args:
            - "--ignore-db-dir=lost+found"          
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates: 
    - metadata:
        name: data
      spec:
        #storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
