ingress_redis/03_was.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
spec:
  selector:
    app: mywas
  ports:
  - port: 8080
    targetPort: 8080
  # type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywas
spec:
  replicas: 3
  selector:       #selector와 labels를 서비스와 일치시켜야 함
    matchLabels:
      app: mywas
  template:
    metadata:
      labels:
        app: mywas
    spec:
      containers:
      - name: mywas
        image: eeunchong/rapaf-was:v1
        ports:
        - containerPort: 8080
