ingress_redis/04_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: conf
            mountPath: /etc/nginx/       
      volumes:
        - name: conf
          configMap:
            name: nginx-conf
