ingress_redis/05_ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:492021314651:certificate/b0a0a76e-ddfc-44f5-9ca6-4fd82a1a04c8
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  # tls:
  #   - hosts:
  #       - www.eunch.com
  #     secretName: tls-crt 
  rules:
  - host: www.eunch.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myweb
            port: 
              number: 80
